Closed
Bug 199928
Opened 23 years ago
Closed 23 years ago
cookies originating server test failes on ip addresses
Categories
(Core :: Networking: Cookies, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: aschultz, Assigned: dwitte)
References
Details
Attachments
(1 file)
|
2.63 KB,
patch
|
mvl
:
review+
darin.moz
:
superreview+
asa
:
approval1.4a+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.4a) Gecko/20030329
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.4a) Gecko/20030329
cookies originating server test failes on an intranet site that can only be
reached though it's non public ip address and that that no reverse lockup host
name. Excerpt from Live HTTP headers and cookie log shows the problem.
The check works if the site can be reached though a valid hostname.
Setting "Prefs / Privacy / Cookies" to "Allow all cookies" works as a workaround.
Reproducible: Always
Steps to Reproduce:
Live HTTP headers:
http://192.168.123.111/admin/
GET /admin/ HTTP/1.1
Host: 192.168.123.111
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.4a) Gecko/20030329
Accept:
text/xml,application/xml,application/xhtml+xml,text/html;q=0.9,text/plain;q=0.8,video/x-mng,image/png,image/jpeg,image/gif;q=0.2,*/*;q=0.1
Accept-Language: en-us,en;q=0.5
Accept-Encoding: gzip,deflate
Accept-Charset: ISO-8859-1,utf-8;q=0.7,*;q=0.7
Keep-Alive: 300
Connection: keep-alive
Referer: http://192.168.123.111/admin/
HTTP/1.x 200 OK
Date: Mon, 31 Mar 2003 10:41:51 GMT
Server: Apache/1.3.27 Ben-SSL/1.48 (Unix) Debian GNU/Linux mod_gzip/1.3.26.1a
PHP/4.2.3
X-Powered-By: PHP/4.2.3
Cache-Control: private, must-revalidate
Set-Cookie: PHPSESSID=a5c332f1f748c674668d2053364c3140; expires=Wed, 30-Apr-03
10:41:51 GMT; path=/
Keep-Alive: timeout=15, max=98
Connection: Keep-Alive
Transfer-Encoding: chunked
Content-Type: text/html; charset=iso-8859-1
-------------------------------------------------
cookie.log:
0[273fa8]: ===== COOKIE NOT ACCEPTED =====
0[273fa8]: request URL: http://192.168.123.111/admin/
0[273fa8]: cookie string:
0[273fa8]: current time: Mon Mar 31 10:39:17 2003 GMT
0[273fa8]: rejected because originating server test failed
| Assignee | ||
Comment 1•23 years ago
|
||
-> me
Assignee: darin → dwitte
Status: UNCONFIRMED → NEW
Ever confirmed: true
| Assignee | ||
Comment 2•23 years ago
|
||
'nuff said...
(removed a dead portion of comment while i'm in there too)
Updated•23 years ago
|
Attachment #118937 -
Flags: review+
| Assignee | ||
Comment 3•23 years ago
|
||
Comment on attachment 118937 [details] [diff] [review]
fix
oh, thanks mvl, for spotting the problem within 2 minutes of biesi cc'ing us :)
Attachment #118937 -
Flags: superreview?(darin)
Comment 4•23 years ago
|
||
Comment on attachment 118937 [details] [diff] [review]
fix
sr=darin (oops!)
Attachment #118937 -
Flags: superreview?(darin) → superreview+
Comment 5•23 years ago
|
||
Comment on attachment 118937 [details] [diff] [review]
fix
Requesting approval for 1.4a. Low risk fix, that will make mozilla not suck for
web developers, and fixes a potential privacy leak
Attachment #118937 -
Flags: approval1.4a?
Comment 6•23 years ago
|
||
Comment on attachment 118937 [details] [diff] [review]
fix
a=asa (on behalf of drivers) for checkin to 1.4a. Time is short so this needs
to land asap if it's going to make it.
Attachment #118937 -
Flags: approval1.4a? → approval1.4a+
Comment 7•23 years ago
|
||
Checked in by timeless
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
| Assignee | ||
Comment 8•23 years ago
|
||
*** Bug 200145 has been marked as a duplicate of this bug. ***
You need to log in
before you can comment on or make changes to this bug.
Description
•