Bug 199928 cookies originating server test failes on ip addresses patch by dwitte@stanford.edu r=mvl@exedo.nl sr=darin a=asa